# time-display-app

./: .gitignore  CLAUDE.md  Dockerfile  check.sh  main.py  pyproject.toml  setup-gcp.sh
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml
backend/: .gitignore  main.py  requirements.txt  test_main.py
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
k8s/: setup-namespaces.yaml
k8s/base/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/dev/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
k8s/prod/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/staging/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
